--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/AWS vs Azure.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/AWS vs Azure.tex
@@ -98,7 +98,8 @@
 \title{\huge{AWS vs Azure}}
 \author{Jesús Rodríguez Heras\\
 	Carlos Llamas Jaén\\
-	Iván Castillo Caro}
+	Iván Castillo Caro\\
+	Sisic Dino}
 
 
 %%Configuracion del paquete listings
@@ -120,6 +121,11 @@
 	\part{Características y limitaciones}
 	\include{Conceptos/CaracteristicasAWS}
 	\include{Conceptos/CaracteristicasAzure}
+	
+	\part{Comparación de los servicios ofrecidos por AWS y Azure}
+	\include{Comparaciones/CreacionMV}
+	\include{Comparaciones/CreacionWeb}
+	\include{Comparaciones/CreacionIC}
 	
 	\part{Anexo}
 	\include{Anexo/Anexo}
