--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Conceptos/CaracteristicasAWS.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Conceptos/CaracteristicasAWS.tex
@@ -1,6 +1,6 @@
-\chapter{AWS}
+\chapter{Características y limitaciones de AWS}
 \section{Características}
 
 
 \section{Limitaciones}
-
+No tiene inteligencia artificial
