--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Conceptos/CaracteristicasAzure.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Conceptos/CaracteristicasAzure.tex
@@ -1,5 +1,5 @@
-\chapter{Azure}
+\chapter{Características y limitaciones de Azure}
 \section{Características}
-
+Sí tiene inteligencia artificial
 
 \section{Limitaciones}
