--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Introduccion/Azure.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Introduccion/Azure.tex
@@ -1,2 +1,6 @@
 \chapter{Azure}
-En este capítulo se desarrollará la introducción de AWS.
+\section{Historia}
+Historia y por qué surge.
+
+\section{Descripción}
+Poner una descripción de Azure.
