--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Presentación/AWS vs Azure.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Presentación/AWS vs Azure.tex
@@ -53,7 +53,8 @@
 
 \author{Jesús Rodríguez Heras\\
 Carlos Llamas Jaén\\
-Iván Castillo Caro}
+Iván Castillo Caro\\
+Sisic Dino}
 % - Give the names in the same order as the appear in the paper.
 % - Use the \inst{?} command only if the authors have different
 %   affiliation.
