--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Introduccion/Azure.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Introduccion/Azure.tex
@@ -1,6 +1,12 @@
 \chapter{Azure}
+\hypertarget{azure}{}
+\section{¿Qué es Azure?}
+
+
+Compite con \hyperlink{AWS}{Amazon Web Services}.
+
 \section{Historia}
-Historia y por qué surge.
+%Historia y por qué surge.
 
 \section{Descripción}
-Poner una descripción de Azure.
+%Poner una descripción muyy genérica de Azure. Las características son en la parte 2 junto con las limitaciones.
