--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Anexo/Anexo.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Anexo/Anexo.tex
@@ -1,2 +1,11 @@
 \chapter{Referencias}
-Describir las referencias usadas.
+En este capítulo se detallarán las referencias consultadas a la hora de redactar este documento.
+\begin{itemize}
+	\item Documentación oficial de AWS: \url{https://aws.amazon.com/es/}.
+	\item Documentación oficial de Azure: \url{https://azure.microsoft.com/es-es/}.
+	\item \url{https://es.wikipedia.org/wiki/Amazon_Web_Services}.
+	\item \url{https://es.wikipedia.org/wiki/Middleware}.
+	\item \url{https://revistadigital.inesem.es/informatica-y-tics/cloud-computing-con-amazon/}.
+	\item \url{https://docs.aws.amazon.com/es_es/general/latest/gr/aws_service_limits.html}.
+	\item \url{https://azure.microsoft.com/es-es/free/free-account-students-faq/}.
+\end{itemize}
