Documentación de ACPD a falta de web e IOT

--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Comparaciones/CreacionMV.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Comparaciones/CreacionMV.tex
@@ -214,4 +214,11 @@ Para crear el servicio, debemos seguir los siguientes pasos:
 		\caption{Revisión de la configuración.}
 		\label{Revisión de la configuración}
 	\end{figure}
+	\item Para conectarnos, lo haremos por ssh a la IP indicada y para ver las especificaciones de la CPU de la máquina virtual usaremos el comando \texttt{cat /proc/cpuinfo}:
+	\begin{figure}[h]
+		\centering
+		\includegraphics[scale=0.45]{ImagenesAzure/cpuinfo.png}
+		\caption{Información del procesador.}
+		\label{Información del procesador}
+	\end{figure}
 \end{enumerate}
